Hero image and figuring out a horizontal scroll issue

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -3,7 +3,7 @@
 // ===========================================
 // ================ Standards ================
 // ===========================================
-* {
+*, html, body {
     font-size: 16px;
     box-sizing: border-box;
 }
@@ -14,4 +14,6 @@ html {
 body {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
 }
